Bug #21821
MDSMonitor: mons should reject misconfigured mds_blacklist_interval
Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
There should be a minimum acceptable value otherwise we see potential behavior where a blacklisted MDS is still writing to the metadata pool after another MDS takes over its rank.
See also: https://bugzilla.redhat.com/show_bug.cgi?id=1501958
Related issues
History
#1 Updated by John Spray over 5 years ago
A good opportunity to use the new min/max fields on the config option itself.
I suppose if we accept the idea that someone might be tuning this downwards then a sane minimum might be one hour.
We should probably also mark this option as LEVEL_DEV as I'm struggling to think of good reasons for anyone to modify it.
#2 Updated by John Spray over 5 years ago
- Status changed from New to Fix Under Review
#3 Updated by Patrick Donnelly over 5 years ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Nathan Cutler over 5 years ago
- Copied to Backport #21948: luminous: MDSMonitor: mons should reject misconfigured mds_blacklist_interval added
#5 Updated by Nathan Cutler almost 5 years ago
- Status changed from Pending Backport to Resolved